[package]
name = "mobile-risk-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
zip = "2.1.3"
goblin = "0.8"
rusty-axml = "0.2.1" # for AXML parsing
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "7.1"
anyhow = "1.0"
dex = "0.5.0"
toml = "1.1.3"
chrono = "0.4.45"
